Добавлено выпадение меню функций при нажатии на кнопку МЕНЮ, а также его удаление, что повлекло добавление нового полезного метода - удаления. Файловый менеджер готов для добавления других функций.